k8s/base/chroma/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rag-api
  namespace: chroma-system
spec:
  selector:
    app: rag-api
  ports:
    - port: 8000
      targetPort: http
