k8s/base/chroma/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chroma
  namespace: chroma-system
spec:
  selector:
    app: chroma
  ports:
    - port: 8000
      targetPort: http
